ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librechat-ingress
  annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - librechat.cluster.dphx.eu
    secretName: librechat-tls
  rules:
  - host: librechat.cluster.dphx.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librechat
            port:
              number: 3080
